name:                FizzBuzzHs
version:             0.1.0.0
synopsis:            FizzBuzz demonstrating unit and property tests
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
build-type:          Simple
cabal-version:       >=1.10

executable FB
  main-is:     FB.lhs
  build-depends:         base >=4.6 && <4.7
                       , test-framework >=0.8 && <0.9
                       , test-framework-hunit >=0.3 && <0.4
                       , test-framework-quickcheck2 >=0.3 && <0.4
                       , QuickCheck >=2.7 && <2.8
                       , HUnit >=1.2 && <1.3

  default-language:    Haskell2010

test-suite test-fb
  type: exitcode-stdio-1.0
  main-is:             FB.lhs
  build-depends:         base >=4.6 && <4.7
                       , test-framework >=0.8 && <0.9
                       , test-framework-hunit >=0.3 && <0.4
                       , test-framework-quickcheck2 >=0.3 && <0.4
                       , QuickCheck >=2.7 && <2.8
                       , HUnit >=1.2 && <1.3

  default-language:    Haskell2010